--- a/WebServer/WebServer/Pages/FetchData_Download.razor
+++ b/WebServer/WebServer/Pages/FetchData_Download.razor
@@ -41,11 +41,11 @@ else
         </tbody>
     </table>
     @if (page>0){
-        <button @onclick="previousPage">Anterior</button>
+        <button @onclick="previousPage">Previous</button>
     }
     @if(page+1 < maxPage)
     {
-        <button @onclick="nextPage">Proxima</button>    
+        <button @onclick="nextPage">Next</button>    
     } 
     <a href="sample-data/weather.json" download>Download</a>
 }
